docs/apache-airflow/2.10.3/_sources/_api/airflow/sensors/time_sensor/index.rst.txt
:py:mod:`airflow.sensors.time_sensor`
=====================================

.. py:module:: airflow.sensors.time_sensor


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.sensors.time_sensor.TimeSensor
   airflow.sensors.time_sensor.TimeSensorAsync




.. py:class:: TimeSensor(*, target_time, **kwargs)


   Bases: :py:obj:`airflow.sensors.base.BaseSensorOperator`

   Waits until the specified time of the day.

   :param target_time: time after which the job succeeds

   .. seealso::
       For more information on how to use this sensor, take a look at the guide:
       :ref:`howto/operator:TimeSensor`


   .. py:method:: poke(context)

      Override when deriving this class.



.. py:class:: TimeSensorAsync(*, target_time, start_from_trigger = False, trigger_kwargs = None, end_from_trigger = False, **kwargs)


   Bases: :py:obj:`airflow.sensors.base.BaseSensorOperator`

   Waits until the specified time of the day.

   This frees up a worker slot while it is waiting.

   :param target_time: time after which the job succeeds
   :param start_from_trigger: Start the task directly from the triggerer without going into the worker.
   :param end_from_trigger: End the task directly from the triggerer without going into the worker.
   :param trigger_kwargs: The keyword arguments passed to the trigger when start_from_trigger is set to True
       during dynamic task mapping. This argument is not used in standard usage.

   .. seealso::
       For more information on how to use this sensor, take a look at the guide:
       :ref:`howto/operator:TimeSensorAsync`

   .. py:attribute:: start_trigger_args

      

   .. py:attribute:: start_from_trigger
      :value: False

      

   .. py:method:: execute(context)

      Derive when creating an operator.

      Context is the same dictionary used as when rendering jinja templates.

      Refer to get_template_context for more context.


   .. py:method:: execute_complete(context, event = None)

      Handle the event when the trigger fires and return immediately.



